--- a/Labs/[KISTI_세종대_겨울학교]_Day2_보스턴집값예측_캐글데이터만들기.ipynb
+++ b/Labs/[KISTI_세종대_겨울학교]_Day2_보스턴집값예측_캐글데이터만들기.ipynb
@@ -49,10 +49,10 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "X_train_ = pd.DataFrame(X_train)\n",
-        "y_train_ = pd.DataFrame(data=y_train,columns=['label'])\n",
+        "X_train_ = pd.DataFrame(data=X_train,columns=['범죄율','비소매상업지역면적비율','일산화질소농도','주택당방수','인구 중 하위 계층 비율','인구 중 흑인 비율','학생/교사 비율','초과거주 지역비율','강 경계유무','1940년 이전에 건축된 주택비율','방사형 고속도로까지의 거리','직업센터의 거리','재산세율'])\n",
+        "y_train_ = pd.DataFrame(data=y_train,columns=['가격'])\n",
         "X_test_ = pd.DataFrame(X_test)\n",
-        "y_test_ = pd.DataFrame(data=y_test, columns=['label'])\n",
+        "y_test_ = pd.DataFrame(data=y_test, columns=['가격'])\n",
         "\n",
         "\n",
         "df1 = pd.DataFrame(pd.concat([X_train_, y_train_],axis=1))\n",
@@ -75,7 +75,7 @@
         "df4 = pd.DataFrame(y_test_)\n",
         "import numpy as np\n",
         "fill = np.zeros(y_test.size, dtype=np.int8)\n",
-        "df4['label'] = fill\n",
+        "df4['가격'] = fill\n",
         "df4=df4.sort_index()\n",
         "df4 = df4.rename_axis('index')\n",
         "df4.to_csv('sample_submission.csv', sep = ',', index = True)\n"
@@ -86,12 +86,84 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d85aukSKV3Mr"
+        "id": "d85aukSKV3Mr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6d313373-0f57-4a47-aacc-2100f4b7f055"
+      },
+      "source": [
+        "print(X_train_)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "          범죄율  비소매상업지역면적비율  일산화질소농도  ...  방사형 고속도로까지의 거리  직업센터의 거리   재산세율\n",
+            "0     0.14150          0.0     6.91  ...            17.9    383.37   5.81\n",
+            "1     0.15445         25.0     5.13  ...            19.7    390.68   6.86\n",
+            "2    16.81180          0.0    18.10  ...            20.2    396.90  30.81\n",
+            "3     0.05646          0.0    12.83  ...            18.7    386.40  12.34\n",
+            "4     8.79212          0.0    18.10  ...            20.2      3.65  17.16\n",
+            "..        ...          ...      ...  ...             ...       ...    ...\n",
+            "399   0.03548         80.0     3.64  ...            16.4    395.18   9.25\n",
+            "400   0.09164          0.0    10.81  ...            19.2    390.91   5.52\n",
+            "401   5.87205          0.0    18.10  ...            20.2    396.90  19.37\n",
+            "402   0.33045          0.0     6.20  ...            17.4    376.75  10.88\n",
+            "403   0.08014          0.0     5.96  ...            19.2    396.90   8.77\n",
+            "\n",
+            "[404 rows x 13 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pu_wqK6CBDrW",
+        "outputId": "68ae0c9c-f8af-464f-f10e-059b9e223d61"
+      },
+      "source": [
+        "print(y_train_)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "       가격\n",
+            "0    25.3\n",
+            "1    23.3\n",
+            "2     7.2\n",
+            "3    21.2\n",
+            "4    11.7\n",
+            "..    ...\n",
+            "399  20.9\n",
+            "400  22.8\n",
+            "401  12.5\n",
+            "402  24.0\n",
+            "403  21.0\n",
+            "\n",
+            "[404 rows x 1 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M9NVuPwUBGYe"
       },
       "source": [
         ""
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     }
   ]
